[gd_scene load_steps=10 format=2]

[ext_resource path="res://autoloads/textures/Textures.gd" type="Script" id=1]
[ext_resource path="res://autoloads/textures/mesh/base.tscn" type="PackedScene" id=2]
[ext_resource path="res://autoloads/textures/mesh/position.gd" type="Script" id=3]
[ext_resource path="res://autoloads/textures/mesh/normal.gd" type="Script" id=4]
[ext_resource path="res://assets/shaders/paint_shader.tres" type="Material" id=5]
[ext_resource path="res://assets/shaders/depth_buffer_shader.tres" type="Material" id=6]

[sub_resource type="Environment" id=1]

[sub_resource type="QuadMesh" id=2]
size = Vector2( 100, 100 )

[sub_resource type="SphereMesh" id=3]

[node name="textures" type="Node"]
script = ExtResource( 1 )

[node name="mesh" type="Node" parent="."]

[node name="position" parent="mesh" instance=ExtResource( 2 )]
disable_3d = true
usage = 3
script = ExtResource( 3 )

[node name="normal" parent="mesh" instance=ExtResource( 2 )]
disable_3d = true
usage = 3
script = ExtResource( 4 )

[node name="paint" type="Node" parent="."]

[node name="albedo" type="Viewport" parent="paint"]
size = Vector2( 2048, 2048 )
transparent_bg = true
disable_3d = true
usage = 3
render_target_v_flip = true
render_target_clear_mode = 2

[node name="paint_sprite" type="ColorRect" parent="paint/albedo" groups=[
"paint_sprite",
]]
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="roughness" type="Viewport" parent="paint"]
size = Vector2( 2048, 2048 )
transparent_bg = true
disable_3d = true
usage = 3
render_target_v_flip = true
render_target_clear_mode = 2

[node name="paint_sprite" type="ColorRect" parent="paint/roughness" groups=[
"paint_sprite",
]]
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="metalness" type="Viewport" parent="paint"]
size = Vector2( 2048, 2048 )
transparent_bg = true
disable_3d = true
usage = 3
render_target_v_flip = true
render_target_clear_mode = 2

[node name="paint_sprite" type="ColorRect" parent="paint/metalness" groups=[
"paint_sprite",
]]
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="emission" type="Viewport" parent="paint"]
size = Vector2( 2048, 2048 )
transparent_bg = true
disable_3d = true
usage = 3
render_target_v_flip = true
render_target_clear_mode = 2

[node name="paint_sprite" type="ColorRect" parent="paint/emission" groups=[
"paint_sprite",
]]
material = ExtResource( 5 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="depth_buffer" type="Viewport" parent="."]
size = Vector2( 1024, 1024 )
hdr = false
render_target_v_flip = true
render_target_update_mode = 3

[node name="cam_slave" type="Camera" parent="depth_buffer"]
environment = SubResource( 1 )
current = true

[node name="depth_quad" type="MeshInstance" parent="depth_buffer/cam_slave"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -20 )
layers = 2
mesh = SubResource( 2 )
material/0 = ExtResource( 6 )

[node name="todo_remove_me" type="MeshInstance" parent="depth_buffer"]
visible = false
mesh = SubResource( 3 )
material/0 = null
